# chinese_app

./: .gitignore  README.md  ingest.py  main.py  pyproject.toml
ChineseVoiceTranslator/ChineseVoiceTranslator/: APIClient.swift  CharacterView.swift  ChineseVoiceTranslatorApp.swift  ContentView.swift  FlashcardView.swift  LanguageManager.swift  QuizView.swift  SettingsView.swift  SharedComponents.swift  Strings.swift  Theme.swift
ChineseVoiceTranslator/ChineseVoiceTranslator.xcodeproj/: project.pbxproj
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/ios/: ExportOptions.plist  Podfile
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: api_client.dart  language_manager.dart  main.dart  models.dart  strings.dart  theme.dart
flutter_app/lib/screens/: characters_screen.dart  exam_screen.dart  flashcards_screen.dart  settings_screen.dart  translate_screen.dart
flutter_app/lib/utils/: input_type.dart  serbian_utils.dart
flutter_app/lib/widgets/: input_type_selector.dart  screen_header.dart  stroke_order_view.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
